css/style.css
/*****************************************************
* CSS Mockup Activity - Custom CSS Stylesheet
* @author rlewis37
*
* Some rules have been included here to give you a head start.
* Create your own custom CSS rules below. Have fun!
******************************************************/
html, body {
	margin: 0;
	box-sizing: border-box;
}

/****
.container {
	margin: 0 auto;
	padding: 0 2rem;
}
***/
.clearfix {
	clear: both;
}

/* create a responsive container */
@media only screen and (min-width: 1200px) {
	.container { width: 1170px; }
}

@media only screen and (min-width: 992px) and (max-width: 1199px) {
	.container { width: 970px; }
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
	.container { width: 750px; }
}

/*****************************************************
* Flexbox Sticky Footer
* http://philipwalton.github.io/solved-by-flexbox/demos/sticky-footer/
******************************************************/

/*corrects IE min-height bug*/
html { display: flex;}
body { width: 100%;}

.sfooter {
	display: flex;
	flex-direction: column;
	min-height: 100vh;
}

.sfooter-content {
	flex: 1 0 auto;
}

/*****************************************************
* ADD YOUR OWN CSS BELOW! (ﾉ◕ヮ◕)ﾉ*:･ﾟ✧
*
* HINT: You might want to be conversant with the following:
* * Shorthand syntax for padding, margin, and borders
* * Display property and values... and the differences between them.
* * The Box Model
* * Pseudo Classes
* * Attribute Selectors
******************************************************/

header > .container {
	font-family: "Liberation Mono", monospace;
	color: #00fd01;
	text-align: center;
	background: #333333;
	padding-top: 20px;
	padding-bottom: 20px;
}
h1 {
	font-size: 25px;
	display: inline;
}

em {
	font-size: 8px;
}

body {
	font-family: "Liberation Mono", monospace;
}

.container img {
	 margin: auto 25%;
	 width: 50%;
	 height: 50%;
}

.container > .instructions-wrapper {
	display: flex;
	border: 2px solid black;
}

.container > .instructions-wrapper > h2 {
	font-size: 15px;
}

.container > .instructions-wrapper > ol {
	font-size: 12px;
}

